# social-media-travel-planner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  cli.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-production.yml
common/: __init__.py  fixtures.py  models.py  text.py
docs/: accurate-place-pins-plan.md  attraction-categories-implementation.md  attraction-categories-plan.md  aws-dynamodb.md  category-extract-validation.json  hierarchy-validation.json  link-ingestion-plan.md  locate-compare-results.json  locate-compare-v3-results.json  locate-v3-global-validation.json  locate-v3-validation.md  mvp-pipeline-roadmap.md  place-enrichment-plan.md  place-hierarchy-plan.md  primary-place-plan.md  serverless-deploy.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  main.tsx  maps.ts  placeMapUtils.ts  postDisplayUtils.ts  styles.css  timelineParse.ts  vite-env.d.ts
infra/: Dockerfile  app.py  cdk.json  requirements.txt  samconfig.toml.example  template.yaml  travel_planner_stack.py
ingest/: __init__.py  parser.py  sources.py
mobile/: .env.example  README.md  app.config.ts  package-lock.json  package.json
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
planner/: __init__.py  builder.py
scripts/: create_tables.py  migrate_json_to_dynamodb.py  plan_from_fixture.py  validate_categories.py  validate_hierarchy.py  validate_locate_v3.py
server/: app.py  auth.py  ingest_runner.py  jobs.py  lambda_handler.py  media_proxy.py  schemas.py  timeline_runner.py  timeline_staging.py  workers.py
tests/: conftest.py  test_api.py  test_category_merge.py  test_extract.py  test_gc.py  test_hierarchy.py  test_instagram.py  test_instagram_profile.py  test_jobs.py  test_links.py  test_media_proxy.py  test_pipeline.py  test_place_candidates.py  test_places.py  test_places_locate.py  test_places_resolve.py  test_planner.py  test_store.py  test_timeline_import.py  test_visits.py  test_workers.py
travelplanner/: categories.py  extract.py  hierarchy.py  library.py  links.py  logging_config.py  models.py  pipeline.py  place_hints.py  places.py  settings.py  store.py  visits.py
(+83 files in other folders)
