[project]
name = "social-media-travel-planner"
version = "0.1.0"
description = "Turn saved social media posts into structured travel plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "ingest*", "planner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
