[project]
name = "social-media-travel-planner"
version = "0.1.0"
description = "Turn saved social media posts into structured travel plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ensembledata>=0.2.11",
    "supadata>=0.1.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "geopy>=2.4.1",
    "certifi>=2024.2.2",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["travelplanner*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
